package dat.carport.model.entities.DBEntities;

public class DBCustomerInfo {
}
