package dat.carport.model.entities.ServiceEntities;

public class MaterialList {
}
